First version of Deal MC

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/rest_app_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/deal
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
+server.port=8090
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.show_sql=true
+
+springdoc.swagger-ui.path=/deal/swagger-ui.html
+springdoc.api-docs.path=/deal/api-docs
+
+applicationLink=http://localhost:8080/conveyor/offers
+calculationLink=http://localhost:8080/conveyor/calculation
