--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ springdoc.api-docs.path=/deal/api-docs
 
 applicationLink=http://localhost:8080/conveyor/offers
 calculationLink=http://localhost:8080/conveyor/calculation
+
+server.error.include-message=always
