--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ applicationLink=http://localhost:8080/conveyor/offers
 calculationLink=http://localhost:8080/conveyor/calculation
 
 server.error.include-message=always
+logging.level.root=INFO
+logging.level.ru.senya.deal=TRACE
