--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ springdoc.api-docs.path=/deal/api-docs
 applicationLink=http://localhost:8080/conveyor/offers
 calculationLink=http://localhost:8080/conveyor/calculation
 
+spring.jpa.hibernate.ddl-auto=validate
+
 server.error.include-message=always
 logging.level.root=INFO
 logging.level.ru.senya.deal=TRACE
