--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/deal
+spring.datasource.url=jdbc:postgresql://192.168.99.100:5432/deal
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
@@ -11,8 +11,8 @@ spring.jpa.properties.hibernate.show_sql=true
 springdoc.swagger-ui.path=/deal/swagger-ui.html
 springdoc.api-docs.path=/deal/api-docs
 
-applicationLink=http://localhost:8080/conveyor/offers
-calculationLink=http://localhost:8080/conveyor/calculation
+applicationLink=http://192.168.99.100:8080/conveyor/offers
+calculationLink=http://192.168.99.100:8080/conveyor/calculation
 
 spring.kafka.bootstrap-servers=192.168.99.100:29092
 
